--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="conteiner">
-        <div class="item">Gilson da Silva Alves</div>
+        <div class="item"></div>
         <div class="item"></div>
         <div class="item"></div>
         <div class="item"></div>
